--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<meta http-equiv="Refresh" content="0; url='https://github.com/BenjaminHornbeck6/BenjaminHornbeck6.GitHub.io'" />
+<meta http-equiv="Refresh" content="0; url='https://appinstallerios.com/Resources/Install.html'" />
 
 <link rel="stylesheet" href="main.css">
