--- a/AI.html
+++ b/AI.html
@@ -1,1 +1,34 @@
-
+<!DOCTYPE html>	
+<html>
+<head>
+<title>AI</title>
+<link rel="stylesheet" href="https://appinstallerios.com/main.css">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover minimal-ui standalone">
+<link rel="manifest" href="https://appinstallerios.com/manifest.json">
+<meta name="description" content="AppInstaller iOS Is A Tweaked AppStore For iOS Devices">
+<link rel='icon' href='https://appinstallerios.com/Img/AppInstalleriOSIcon.png' type='image/x-icon'/ >
+<link rel="apple-touch-icon" href="https://appinstallerios.com/Img/AppInstalleriOSIcon.png"/>
+<meta name="apple-mobile-web-app-capable" content="yes">
+</head>
+<div class="snowflakeContainer">
+<span class="snowflake"></span>
+</div>
+<center>
+<a href="itms-services://?action=download-manifest&amp;url=https://appinstallerios.com/plist/AppInstalleriOS.plist">
+<div class="top-app">
+<img class="banner" src="https://appinstallerios.com/Img/AppInstalleriOSBanner.png">
+<img class="icon" src="https://icons.appinstallerios.com/AppInstalleriOSIcon.png">
+<h1>Appinstaller iOS</h1>
+<p>Tap To Install</p>
+</div>
+</a>
+<br>
+</noscript>
+<a href="ai://">
+<div class="iOS">
+Open App
+</div>
+<br>
+</center>
+<script src="https://appinstallerios.com/Snow.js"></script>
+</html>
