--- a/AI.html
+++ b/AI.html
@@ -14,7 +14,7 @@
 <span class="snowflake"></span>
 </div>
 <center>
-<a href="itms-services://?action=download-manifest&amp;url=https://appinstallerios.com/plist/AppInstalleriOS.plist">
+<a href="altstore://install?url=https://appinstallerios.com/plist/AppInstalleriOS.plist">
 <div class="top-app">
 <img class="banner" src="https://appinstallerios.com/Img/AppInstalleriOSBanner.png">
 <img class="icon" src="https://icons.appinstallerios.com/AppInstalleriOSIcon.png">
