--- a/404.html
+++ b/404.html
@@ -19,7 +19,7 @@
 <span class="snowflake"></span>
 </div>
 <center>
-<a href="https://appinstallerios.com">
+<a href="https://appinstallerios.com/Resources">
 <div class="top-app">
 <img class="banner" src="https://appinstallerios.com/Img/AppInstalleriOSBanner.png">
 <img class="icon" src="https://appinstallerios.com/Img/AppInstalleriOSIcon.png">
