--- a/Install.html
+++ b/Install.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>	
 <html>
 <head>
-<title>Install App</title>
+<title>Install AI</title>
 <link rel="stylesheet" href="https://appinstallerios.com/main.css">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover minimal-ui standalone">
 <link rel="manifest" href="https://appinstallerios.com/manifest.json">
