--- a/Install.html
+++ b/Install.html
@@ -29,9 +29,9 @@
 3.4.3
 </div>
 <br>
-<center>
-<img src="https://hitwebcounter.com/counter/counter.php?page=7938929&style=0010&nbdigits=9&type=page&initCount=0" title="Free Counter" Alt="web counter"   border="0" />
-</center>
+<div class="webcount">
+<img src="https://hitwebcounter.com/counter/counter.php?page=7938929&style=0001&nbdigits=9&type=page&initCount=0" title="Free Counter" Alt="web counter"   border="0" />
+</div>
 </center>
 <script src="https://appinstallerios.com/Snow.js"></script>
 </html>
