--- a/InstallPublic.html
+++ b/InstallPublic.html
@@ -31,8 +31,8 @@
 <br>
 <a href="itms-services://?action=download-manifest&amp;url=https://appinstallerios.com/plist/AppInstalleriOSPublic.plist">
 <div class="top-app">
-<img class="banner" src="Img/AppInstalleriOSBanner.png">
-<img class="icon" src="Img/AppInstalleriOSIcon.png">
+<img class="banner" src="https://appinstallerios.com/Img/AppInstalleriOSBanner.png">
+<img class="icon" src="https://appinstallerios.com/Img/AppInstalleriOSIcon.png">
 <h1>Appinstaller iOS</h1>
 <p>Tap To Install</p>
 </div>
@@ -41,3 +41,6 @@
 </div>
 </a>
 <br>
+<div class="webcount">
+<img src="https://hitwebcounter.com/counter/counter.php?page=7938929&style=0001&nbdigits=9&type=page&initCount=0" title="Free Counter" Alt="web counter"   border="0" />
+</div>
