--- a/InstallPublic.html
+++ b/InstallPublic.html
@@ -20,7 +20,7 @@
 </div>
 <a href="javascript:TextPopUp()">
 <div class="top">
-<img src="Img/AppInstalleriOSIconCircle.png">
+<img src="https://appinstallerios.com/Img/AppInstalleriOSIconCircle.png">
 <h1>AppInstaller iOS</h1>
 </div>
 </a>
