--- a/Install.html
+++ b/Install.html
@@ -38,7 +38,7 @@
 </div>
 </a>
 <br>
-<a href="ai://">
+<a href="https://appinstallerios.com/Resources/OpenAI.html">
 <div class="iOS">
 Open App
 </div>
