--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <meta http-equiv="Refresh" content="0; url='https://appinstallerios.com/Resources/Install.html'" />
 
-<link rel="stylesheet" href="main.css">
+<link rel="stylesheet" href="https://appinstallerios.com/main.css">
