--- a/OpenAI.html
+++ b/OpenAI.html
@@ -1,3 +1,3 @@
 <meta http-equiv="Refresh" content="0; url='ai://'" />
 
-<link rel="stylesheet" href="main.css">
+<link rel="stylesheet" href="https://appinstallerios.com/main.css">
