--- a/AppleEvent.html
+++ b/AppleEvent.html
@@ -33,8 +33,8 @@
 <div class="top-app">
 <img class="banner" src="https://appinstallerios.com/Img/WWDCBanner.png">
 <img class="icon" src="https://appinstallerios.com/Img/WWDCIcon.png">
-<h1>Appinstaller iOS</h1>
-<p>Tap To Install</p>
+<h1>WWWDC 22</h1>
+<p>June</p>
 </div>
 </a>
 <br>
