--- a/AppleEvent.html
+++ b/AppleEvent.html
@@ -34,7 +34,7 @@
 <img class="banner" src="https://appinstallerios.com/Img/WWDCBanner.png">
 <img class="icon" src="https://appinstallerios.com/Img/WWDCIcon.png">
 <h1>WWWDC 22</h1>
-<p>June</p>
+<p>June 6 2022</p>
 </div>
 </a>
 <br>
