--- a/AppleEvent.html
+++ b/AppleEvent.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>	
 <html>
 <head>
-<title>AppInstaller iOS</title>
+<title>Apple Event</title>
 <link rel="stylesheet" href="https://appinstallerios.com/main.css">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover minimal-ui standalone">
 <link rel="manifest" href="manifest.json">
@@ -18,12 +18,6 @@
 <div class="snowflakeContainer">
 <span class="snowflake"></span>
 </div>
-<a href="javascript:TextPopUp()">
-<div class="top">
-<img src="https://appinstallerios.com/Img/AppInstalleriOSIconCircle.png">
-<h1>AppInstaller iOS</h1>
-</div>
-</a>
 <center>
 <br>
 <br>
