--- a/AppleEvent.html
+++ b/AppleEvent.html
@@ -5,15 +5,15 @@
 <link rel="stylesheet" href="https://appinstallerios.com/main.css">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover minimal-ui standalone">
 <link rel="manifest" href="manifest.json">
-<meta name="description" content="AppInstaller iOS Is A Tweaked AppStore For iOS Devices">
-<link rel='icon' href='Img/AppInstalleriOSIcon.png' type='image/x-icon'/ >
-<link rel="apple-touch-icon" href="Img/AppInstalleriOSIcon.png"/>
+<meta name="description" content="Apple Event">
+<link rel='icon' href='https://appinstallerios.com/Img/WWDCIcon.png' type='image/x-icon'/ >
+<link rel="apple-touch-icon" href="https://appinstallerios.com/Img/WWDCIcon.png"/>
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content="https://appinstallerios.com" />
 <meta property="twitter:title" content="AppInstaller iOS" />
-<meta property="twitter:description" content="AppInstaller iOS Is A Tweaked AppStore For iOS Devices"/>
-<meta property="twitter:image" content="https://appinstallerios.com/Img/AppInstalleriOSBanner.png"/>
+<meta property="twitter:description" content="WWDC 22"/>
+<meta property="twitter:image" content="https://appinstallerios.com/Img/WWDCBanner.png"/>
 </head>
 <div class="snowflakeContainer">
 <span class="snowflake"></span>
