--- a/AppleEvent.html
+++ b/AppleEvent.html
@@ -27,7 +27,7 @@
 <div class="top-app">
 <img class="banner" src="https://appinstallerios.com/Img/WWDCBanner.png">
 <img class="icon" src="https://appinstallerios.com/Img/WWDCIcon.png">
-<h1>WWWDC 22</h1>
+<h1>WWDC 22</h1>
 <p>June 6 2022</p>
 </div>
 </a>
