--- a/AppleEvent.html
+++ b/AppleEvent.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Apple Event</title>
-<link rel="stylesheet" href="https://appinstallerios.com/main.css">
+<link rel="stylesheet" href="https://appinstallerios.com/AppleEvent.css">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover minimal-ui standalone">
 <link rel="manifest" href="manifest.json">
 <meta name="description" content="Apple Event">
