--- a/AppleEvent.html
+++ b/AppleEvent.html
@@ -10,7 +10,7 @@
 <link rel="apple-touch-icon" href="https://appinstallerios.com/Img/WWDCIcon.png"/>
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta property="twitter:card" content="summary_large_image" />
-<meta property="twitter:url" content="https://appinstallerios.com" />
+<meta property="twitter:url" content="https://appinstallerios.com/Resources/AppleEvent" />
 <meta property="twitter:title" content="AppInstaller iOS" />
 <meta property="twitter:description" content="WWDC 22"/>
 <meta property="twitter:image" content="https://appinstallerios.com/Img/WWDCBanner.png"/>
