--- a/AppleBeta.html
+++ b/AppleBeta.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>	
 <html>
 <head>
-<title>Apple Event</title>
+<title>Apple Beta</title>
 <link rel="stylesheet" href="https://appinstallerios.com/AppleBeta.css">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover minimal-ui standalone">
 <link rel="manifest" href="manifest.json">
@@ -13,7 +13,7 @@
 <meta property="twitter:url" content="https://appinstallerios.com/Resources/AppleBeta" />
 <meta property="twitter:title" content="AppInstaller iOS" />
 <meta property="twitter:description" content="WWDC 22"/>
-<meta property="twitter:image" content="https://appinstallerios.com/Img/WWDCBanner.png"/>
+<meta property="twitter:image" content="https://appinstallerios.com/Img/AppleBetaBanner.png"/>
 </head>
 <div class="snowflakeContainer">
 <span class="snowflake"></span>
@@ -22,7 +22,7 @@
 <br>
 <a href="https://getiosbeta.useapplezone.com">
 <div class="top-app">
-<img class="banner" src="https://appinstallerios.com/Img/WWDCBanner.png">
+<img class="banner" src="https://appinstallerios.com/Img/AppleBetaBanner.png">
 <img class="icon" src="https://appinstallerios.com/Img/WWDCIcon.png">
 <h1>Apple Beta</h1>
 <p>iOS 15.6 Beta 1</p>
