--- a/AppleBeta.html
+++ b/AppleBeta.html
@@ -6,8 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover minimal-ui standalone">
 <link rel="manifest" href="manifest.json">
 <meta name="description" content="Apple Event">
-<link rel='icon' href='https://appinstallerios.com/Img/WWDCIcon.png' type='image/x-icon'/ >
-<link rel="apple-touch-icon" href="https://appinstallerios.com/Img/WWDCIcon.png"/>
+<link rel='icon' href='https://appinstallerios.com/Img/AppleBetaIcon.png' type='image/x-icon'/ >
+<link rel="apple-touch-icon" href="https://appinstallerios.com/Img/AppleBetaIcon.png"/>
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content="https://appinstallerios.com/Resources/AppleBeta" />
@@ -23,7 +23,7 @@
 <a href="https://getiosbeta.useapplezone.com">
 <div class="top-app">
 <img class="banner" src="https://appinstallerios.com/Img/AppleBetaBanner.png">
-<img class="icon" src="https://appinstallerios.com/Img/WWDCIcon.png">
+<img class="icon" src="https://appinstallerios.com/Img/AppleBetaIcon.png">
 <h1>Apple Beta</h1>
 <p>iOS 15.6 Beta 1</p>
 </div>
