--- a/AppleBeta.html
+++ b/AppleBeta.html
@@ -5,14 +5,14 @@
 <link rel="stylesheet" href="https://appinstallerios.com/AppleBeta.css">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover minimal-ui standalone">
 <link rel="manifest" href="manifest.json">
-<meta name="description" content="Apple Event">
+<meta name="description" content="Apple Beta">
 <link rel='icon' href='https://appinstallerios.com/Img/AppleBetaIcon.png' type='image/x-icon'/ >
 <link rel="apple-touch-icon" href="https://appinstallerios.com/Img/AppleBetaIcon.png"/>
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content="https://appinstallerios.com/Resources/AppleBeta" />
 <meta property="twitter:title" content="AppInstaller iOS" />
-<meta property="twitter:description" content="WWDC 22"/>
+<meta property="twitter:description" content="Apple Beta"/>
 <meta property="twitter:image" content="https://appinstallerios.com/Img/AppleBetaBanner.png"/>
 </head>
 <div class="snowflakeContainer">
