--- a/AppleBeta.html
+++ b/AppleBeta.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Apple Beta</title>
-<link rel="stylesheet" href="https://appinstallerios.com/AppleBeta.css">
+<link rel="stylesheet" href="https://appinstallerios.com/css/AppleBeta.css">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover minimal-ui standalone">
 <link rel="manifest" href="manifest.json">
 <meta name="description" content="Apple Beta">
