--- a/NewOS.html
+++ b/NewOS.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>	
 <html>
 <head>
-<title>Apple Beta</title>
-<link rel="stylesheet" href="https://appinstallerios.com/css/AppleBeta.css">
+<title>New OS</title>
+<link rel="stylesheet" href="https://appinstallerios.com/css/NewOS.css">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover minimal-ui standalone">
 <link rel="manifest" href="manifest.json">
 <meta name="description" content="Apple Beta">
@@ -24,7 +24,7 @@
 <div class="top-app">
 <img class="banner" src="https://appinstallerios.com/Img/AppleBetaBanner.png">
 <img class="icon" src="https://appinstallerios.com/Img/AppleBetaIcon.png">
-<h1>Apple Beta</h1>
+<h1>New OS</h1>
 <p>iOS 15.6 Beta 1</p>
 </div>
 </a>
