--- a/AppleEvent.html
+++ b/AppleEvent.html
@@ -11,7 +11,7 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content="https://appinstallerios.com/Resources/AppleEvent" />
-<meta property="twitter:title" content="AppInstaller iOS" />
+<meta property="twitter:title" content="Apple Event" />
 <meta property="twitter:description" content="WWDC 22"/>
 <meta property="twitter:image" content="https://appinstallerios.com/Img/WWDCBanner.png"/>
 </head>
