--- a/AppleBeta.html
+++ b/AppleBeta.html
@@ -11,7 +11,7 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content="https://appinstallerios.com/Resources/AppleBeta" />
-<meta property="twitter:title" content="AppInstaller iOS" />
+<meta property="twitter:title" content="Apple Beta" />
 <meta property="twitter:description" content="Apple Beta"/>
 <meta property="twitter:image" content="https://appinstallerios.com/Img/AppleBetaBanner.png"/>
 </head>
