--- a/NewOS.html
+++ b/NewOS.html
@@ -22,8 +22,8 @@
 <br>
 <a href="https://applebeta.useapplezone.com">
 <div class="top-app">
-<img class="banner" src="https://appinstallerios.com/Img/AppleBetaBanner.png">
-<img class="icon" src="https://appinstallerios.com/Img/AppleBetaIcon.png">
+<img class="banner" src="https://appinstallerios.com/Img/NewOSBanner.png">
+<img class="icon" src="https://appinstallerios.com/Img/NewOSIcon.png">
 <h1>New OS</h1>
 <p>Bringing The iOS 11 Experience In An App!</p>
 </div>
