--- a/NewOS.html
+++ b/NewOS.html
@@ -6,14 +6,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover minimal-ui standalone">
 <link rel="manifest" href="manifest.json">
 <meta name="description" content="New OS">
-<link rel='icon' href='https://appinstallerios.com/Img/AppleBetaIcon.png' type='image/x-icon'/ >
-<link rel="apple-touch-icon" href="https://appinstallerios.com/Img/AppleBetaIcon.png"/>
+<link rel='icon' href='https://appinstallerios.com/Img/NewOSIcon.png' type='image/x-icon'/ >
+<link rel="apple-touch-icon" href="https://appinstallerios.com/Img/NewOSIcon.png"/>
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content="https://appinstallerios.com/Resources/NewOS" />
 <meta property="twitter:title" content="New OS" />
 <meta property="twitter:description" content="New OS"/>
-<meta property="twitter:image" content="https://appinstallerios.com/Img/AppleBetaBanner.png"/>
+<meta property="twitter:image" content="https://appinstallerios.com/Img/NewOSBanner.png"/>
 </head>
 <div class="snowflakeContainer">
 <span class="snowflake"></span>
