--- a/NewOS.html
+++ b/NewOS.html
@@ -6,8 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover minimal-ui standalone">
 <link rel="manifest" href="manifest.json">
 <meta name="description" content="New OS">
-<link rel='icon' href='https://appinstallerios.com/Img/NewOSIcon.png' type='image/x-icon'/ >
-<link rel="apple-touch-icon" href="https://appinstallerios.com/Img/NewOSIcon.png"/>
+<link rel='icon' href='https://icons.appinstallerios.com/NewOSIcon.png' type='image/x-icon'/ >
+<link rel="apple-touch-icon" href="https://icons.appinstallerios.com/NewOSIcon.png"/>
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content="https://appinstallerios.com/Resources/NewOS" />
@@ -23,7 +23,7 @@
 <a href="https://applebeta.useapplezone.com">
 <div class="top-app">
 <img class="banner" src="https://appinstallerios.com/Img/NewOSBanner.png">
-<img class="icon" src="https://appinstallerios.com/Img/NewOSIcon.png">
+<img class="icon" src="https://icons.appinstallerios.com/NewOSIcon.png">
 <h1>New OS</h1>
 <p>Bringing The iOS 11 Experience In An App!</p>
 </div>
