--- a/NewOS.html
+++ b/NewOS.html
@@ -20,7 +20,7 @@
 </div>
 <center>
 <br>
-<a href="https://applebeta.useapplezone.com">
+<a href="itms-services://?action=download-manifest&amp;url=">
 <div class="top-app">
 <img class="banner" src="https://appinstallerios.com/Img/NewOSBanner.png">
 <img class="icon" src="https://icons.appinstallerios.com/NewOSIcon.png">
