--- a/Twitter.html
+++ b/Twitter.html
@@ -1,1 +1,39 @@
-
+<!DOCTYPE html>	
+<html>
+<head>
+<title>Apple Beta</title>
+<link rel="stylesheet" href="https://appinstallerios.com/css/Twitter.css">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover minimal-ui standalone">
+<link rel="manifest" href="manifest.json">
+<meta name="description" content="Apple Beta">
+<link rel='icon' href='https://appinstallerios.com/Img/AppleBetaIcon.png' type='image/x-icon'/ >
+<link rel="apple-touch-icon" href="https://appinstallerios.com/Img/AppleBetaIcon.png"/>
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://appinstallerios.com/Resources/AppleBeta" />
+<meta property="twitter:title" content="Apple Beta" />
+<meta property="twitter:description" content="Apple Beta"/>
+<meta property="twitter:image" content="https://appinstallerios.com/Img/AppleBetaBanner.png"/>
+</head>
+<div class="snowflakeContainer">
+<span class="snowflake"></span>
+</div>
+<center>
+<br>
+<a href="https://applebeta.useapplezone.com">
+<div class="top-app">
+<img class="banner" src="https://appinstallerios.com/Img/AppleBetaBanner.png">
+<img class="icon" src="https://appinstallerios.com/Img/AppleBetaIcon.png">
+<h1>Apple Beta</h1>
+<p>iOS 15.6 Beta 1</p>
+</div>
+</a>
+<br>
+<br>
+<br>
+</div>
+</a>
+<br>
+<div class="webcount">
+<img src="https://hitwebcounter.com/counter/counter.php?page=7938929&style=0001&nbdigits=9&type=page&initCount=0" title="Free Counter" Alt="web counter"   border="0" />
+</div>
