--- a/Twitter.html
+++ b/Twitter.html
@@ -20,12 +20,12 @@
 </div>
 <center>
 <br>
-<a href="https://applebeta.useapplezone.com">
-<div class="top-app">
-<img class="banner" src="https://appinstallerios.com/Img/AppleBetaBanner.png">
-<img class="icon" src="https://appinstallerios.com/Img/AppleBetaIcon.png">
-<h1>Apple Beta</h1>
-<p>iOS 15.6 Beta 1</p>
+<div class="card-devs">
+<img src="AppInstalleriOSGlow.png">
+<h1>AppInstaller iOS</h1>
+<p>Website Developer, Partner</p>
+<a href="https://twitter.com/AppInstalleriOS">Follow</a>
+<a href="https://appinstallerios.com">Website</a>
 </div>
 </a>
 <br>
