--- a/Twitter.html
+++ b/Twitter.html
@@ -21,10 +21,10 @@
 <center>
 <br>
 <div class="card-devs">
-<img src="AppInstalleriOSGlow.png">
-<h1>AppInstaller iOS</h1>
-<p>Website Developer, Partner</p>
-<a href="https://twitter.com/AppInstalleriOS">Follow</a>
+<img src="https://appinstallerios.com/Img/AppInstalleriOSIcon.png">
+<h1>Benjamin</h1>
+<p>Website Developer</p>
+<a href="https://appinstallerios.com/tw">Follow</a>
 </div>
 </a>
 <br>
