--- a/Twitter.html
+++ b/Twitter.html
@@ -5,13 +5,13 @@
 <link rel="stylesheet" href="https://appinstallerios.com/css/Twitter.css">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover minimal-ui standalone">
 <link rel="manifest" href="manifest.json">
-<meta name="description" content="Apple Beta">
-<link rel='icon' href='https://appinstallerios.com/Img/AppleBetaIcon.png' type='image/x-icon'/ >
-<link rel="apple-touch-icon" href="https://appinstallerios.com/Img/AppleBetaIcon.png"/>
+<meta name="description" content="AppInstaller iOS Twitter">
+<link rel='icon' href='https://appinstallerios.com/Img/AppInstalleriOSIcon.png' type='image/x-icon'/ >
+<link rel="apple-touch-icon" href="https://appinstallerios.com/Img/AppInstalleriOSIcon.png"/>
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta property="twitter:card" content="summary_large_image" />
-<meta property="twitter:url" content="https://appinstallerios.com/Resources/AppleBeta" />
-<meta property="twitter:title" content="Apple Beta" />
+<meta property="twitter:url" content="https://appinstallerios.com" />
+<meta property="twitter:title" content="AppInstaller iOS Twitter" />
 <meta property="twitter:description" content="Apple Beta"/>
 <meta property="twitter:image" content="https://appinstallerios.com/Img/AppleBetaBanner.png"/>
 </head>
