--- a/Twitter.html
+++ b/Twitter.html
@@ -22,8 +22,8 @@
 <br>
 <div class="card-devs">
 <img src="https://appinstallerios.com/Img/AppInstalleriOSIcon.png">
-<h1>Benjamin</h1>
-<p>Website Developer</p>
+<h1>Benjamin Hornbeck</h1>
+<p>AppInstaller iOS Developer</p>
 <a href="https://appinstallerios.com/tw">Follow</a>
 </div>
 </a>
