--- a/Twitter.html
+++ b/Twitter.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>	
 <html>
 <head>
-<title>Apple Beta</title>
+<title>AppInstaller iOS Twitter</title>
 <link rel="stylesheet" href="https://appinstallerios.com/css/Twitter.css">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover minimal-ui standalone">
 <link rel="manifest" href="manifest.json">
@@ -12,8 +12,8 @@
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content="https://appinstallerios.com" />
 <meta property="twitter:title" content="AppInstaller iOS Twitter" />
-<meta property="twitter:description" content="Apple Beta"/>
-<meta property="twitter:image" content="https://appinstallerios.com/Img/AppleBetaBanner.png"/>
+<meta property="twitter:description" content=""/>
+<meta property="twitter:image" content="https://appinstallerios.com/Img/AppInstalleriOSBanner.png"/>
 </head>
 <div class="snowflakeContainer">
 <span class="snowflake"></span>
@@ -22,7 +22,7 @@
 <br>
 <div class="card-devs">
 <img src="https://appinstallerios.com/Img/AppInstalleriOSIcon.png">
-<h1>Benjamin Hornbeck</h1>
+<h1>Benjamin</h1>
 <p>AppInstaller iOS Developer</p>
 <a href="https://appinstallerios.com/tw">Follow</a>
 </div>
