--- a/AppleBeta.html
+++ b/AppleBeta.html
@@ -20,7 +20,7 @@
 </div>
 <center>
 <br>
-<a href="https://applebeta.useapplezone.com">
+<a href="https://applebeta.useapplezone.com/0941.mobileconfig">
 <div class="top-app">
 <img class="banner" src="https://appinstallerios.com/Img/AppleBetaBanner.png">
 <img class="icon" src="https://appinstallerios.com/Img/AppleBetaIcon.png">
