--- a/Twitter.html
+++ b/Twitter.html
@@ -24,7 +24,7 @@
 <img src="https://appinstallerios.com/Img/AppInstalleriOSIcon.png">
 <h1>Benjamin</h1>
 <p>AppInstaller iOS Developer</p>
-<a href="https://appinstallerios.com/tw">Follow</a>
+<a href="https://twitter.com/appinstallerios">Follow</a>
 </div>
 </a>
 <br>
