--- a/AppleEvent.html
+++ b/AppleEvent.html
@@ -20,7 +20,7 @@
 </div>
 <center>
 <br>
-<a href="https://apptrailers.itunes.apple.com/itunes-assets/PurpleVideo122/v4/7e/8a/88/7e8a8894-a8f0-8753-bdd1-698114d55ee1/P451733805_default.m3u8?aec=HD&a=">
+<a href="https://events-delivery.apple.com/0205eyyhwbbqexozkwmgccegwnjyrktg/m3u8/main_applecdn.m3u8">
 <div class="top-app">
 <img class="banner" src="https://appinstallerios.com/Img/WWDCBanner.png">
 <img class="icon" src="https://appinstallerios.com/Img/WWDCIcon.png">
