--- a/AppleBeta.html
+++ b/AppleBeta.html
@@ -25,7 +25,7 @@
 <img class="banner" src="https://appinstallerios.com/Img/AppleBetaBanner.png">
 <img class="icon" src="https://appinstallerios.com/Img/AppleBetaIcon.png">
 <h1>Apple Beta</h1>
-<p>iOS 16.0 Beta 8</p>
+<p>iOS 16.0 RC</p>
 </div>
 </a>
 <br>
